Cryptography is now a Single Page Application

--- a/Cryptography/Cryptography/Cryptography.csproj
+++ b/Cryptography/Cryptography/Cryptography.csproj
@@ -85,10 +85,10 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Business\A1Z26.cs" />
+    <Compile Include="Business\Atbash.cs" />
     <Compile Include="Business\Caesar.cs" />
-    <Compile Include="Caesar.xaml.cs">
-      <DependentUpon>Caesar.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="Business\Vigenere.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -112,10 +112,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Caesar.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
